--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -52,5 +52,12 @@
         android:padding="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+<!--    <FrameLayout-->
+<!--        android:id="@+id/item_detail_container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+<!--        android:padding="10dp" />-->
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
