--- a/app/src/main/res/layout/settings_about.xml
+++ b/app/src/main/res/layout/settings_about.xml
@@ -20,7 +20,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.detailflowtest.settings.viewmodel.SettingsAboutViewModel" />
+            type="com.example.detailflowtest.settings.viewmodel.AboutViewModel" />
     </data>
 
 <TableLayout
