--- a/app/src/main/res/layout/settings_firmware.xml
+++ b/app/src/main/res/layout/settings_firmware.xml
@@ -1,21 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="viewModel"
-            type="com.example.detailflowtest.settings.viewmodel.SettingsFirmwareViewModel" />
+            type="com.example.detailflowtest.settings.viewmodel.FirmwareViewModel" />
+        
     </data>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".settings.fragment.SettingsFirmware">
+        android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello" />
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/msg_firmware_file"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/editText_firmware_path"
+            app:layout_constraintEnd_toStartOf="@+id/editText_firmware_path"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/editText_firmware_path" />
 
-    </FrameLayout>
+        <Button
+            android:id="@+id/button_select_fimware_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.selectAction()}"
+            android:text="@string/msg_firmware_select"
+            app:layout_constraintBottom_toBottomOf="@+id/editText_firmware_path"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/editText_firmware_path"
+            app:layout_constraintTop_toTopOf="@+id/editText_firmware_path" />
+
+        <EditText
+            android:id="@+id/editText_firmware_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:ems="10"
+            android:text="@{viewModel.mPath}"
+            android:hint="@string/msg_firmware_file"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/button_firmware_update"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button_firmware_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.updateAction()}"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="40dp"
+            android:text="@string/button_firmware_update"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText_firmware_path" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
